--- a/style/index.css
+++ b/style/index.css
@@ -23,3 +23,9 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+#main_page_link {
+    position: absolute;
+    margin: 2rem 0 1rem 24rem;
+    bottom: 0;
+    font-size: 2rem;
+}
