--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,4 @@
 body {
-    margin: 20rem;
     background-color: cornsilk;
 }
 button {
@@ -10,10 +9,20 @@ a {
     color: aquamarine;
     margin: 12rem;
 }
+textarea {
+    resize: none;
+}
+.offset_content {
+    margin: 20rem;
+}
+.compare_area {
+    margin: 2rem;
+    width: 40rem;
+    height: 28rem;
+}
 #display {
     width:19.5%;
     height: 4rem;
-    resize: none;
     display: block;
     text-align: right;
     font-size: 2rem;
@@ -28,4 +37,7 @@ a {
     margin: 2rem 0 1rem 24rem;
     bottom: 0;
     font-size: 2rem;
+}
+#compare_button {
+    margin-left: 2rem;
 }
